fixed horizontal scrolling for mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -641,11 +641,6 @@ video {
   margin-top: 6rem;
 }
 
-.mtl-products {
-  margin-top: 2rem;
-  margin-left: 2rem;
-}
-
 .block {
   display: block;
 }
@@ -664,16 +659,6 @@ video {
 
 .aspect-square {
   aspect-ratio: 1 / 1;
-}
-
-.gif:hover {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
 }
 
 .h-md {
@@ -754,6 +739,10 @@ video {
   width: 100vw;
 }
 
+.flex-none {
+  flex: none;
+}
+
 .grid-flow-col {
   grid-auto-flow: column;
 }
@@ -766,12 +755,12 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-4 {
@@ -780,10 +769,6 @@ video {
 
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .grid-rows-4 {
@@ -798,6 +783,10 @@ video {
   flex-direction: column;
 }
 
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
 .place-content-center {
   place-content: center;
 }
@@ -808,6 +797,10 @@ video {
 
 .place-items-center {
   place-items: center;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .justify-start {
@@ -1155,6 +1148,10 @@ video {
 
   .md\:place-self-auto {
     place-self: auto;
+  }
+
+  .md\:overflow-x-auto {
+    overflow-x: auto;
   }
 
   .md\:overflow-x-hidden {
